--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -17,7 +17,6 @@
         }
         .video-wrapper {
             position: relative;
-            display: inline-block;
             width: 320px;
             height: 240px;
             margin: 5px;
@@ -29,8 +28,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            max-width: 100%;
-            max-height: 60vh;
+            width: 320px;
+            height: 240px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
