--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -22,19 +22,16 @@
             width: 80%;
             margin-bottom: 20px;
         }
-        
         video {
-            width: 40%;
-            height: auto;
-            object-fit: contain;
+          max-width: 40%;
             border: 1px solid #ccc;
             border-radius: 5px;
+            margin: 5px;
         }
         .controls {
             display: flex;
-            align-items: center;
             flex-direction: column;
-            width: 100%;
+            align-items: center;
         }
         .controls button {
             margin-bottom: 5px;
@@ -160,13 +157,13 @@
                         updateLikesCount(senderId);
                     } else if (data.type === 'unlike') {
                         const senderId = conn.peer;
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
+                        localStorage.setItem('excludedUser', senderId);
+                        setTimeout(() => {
+                            if (localStorage.getItem('excludedUser') === senderId) {
+                                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                                throw new Error("L'utilisateur est exclu");
+                            }
+                        }, 5000);
                         if (!unlikedUsers[senderId]) {
                             unlikedUsers[senderId] = 1;
                         } else {
@@ -227,7 +224,7 @@
                 } else {
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
-            }
+            } 
             if (videoDevices.length > 0) {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
@@ -325,25 +322,22 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        function saveSelectedCamera() {
+        cameraSelect.addEventListener('change', async () => {
             localStorage.setItem('selectedCameraId', cameraSelect.value);
-        }
-        async function changeCamera() {
-            const constraints = await updateCameraSelect();
+     getLocalStream();
             if (localStream) {
-                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
+                const videoTracks = localStream.getVideoTracks();
+                videoTracks.forEach(track => track.stop());
+                const stream = await getLocalStream();
+                if (call) {
+                    call.peerConnection.getSenders().forEach(sender => {
+                        if (sender.track && sender.track.kind === 'video') {
+                            sender.replaceTrack(stream.getVideoTracks()[0]);
+                        }
+                    });
+                }
             }
-            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
-            localStream = newStream;
-            localVideo.srcObject = newStream;
-            applyMicMute();
-        }
-        cameraSelect.addEventListener('change', () => {
-            saveSelectedCamera();
-            getLocalStream().then(stream => {
-                localVideo.srcObject = stream;
-            });
-             changeCamera();
+
         });
 
         peerId.addEventListener('input', () => {
@@ -506,23 +500,15 @@
             }
         }
 
-    setInterval(() => {
-        if (localStorage.getItem('excludedUser')) {
-            document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-            throw new Error("L'utilisateur est exclu");
-        }
-        Object.keys(peerConnections).forEach(peerId => {
-            updateLikeCounts(peerId);
-        });
-    }, 5000);
-        window.addEventListener('beforeunload', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
+        setInterval(() => {
+            if (localStorage.getItem('excludedUser')) {
+                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                throw new Error("L'utilisateur est exclu");
             }
-            if (call) {
-                call.close();
-            }
-        });
+            Object.keys(peerConnections).forEach(peerId => {
+                updateLikeCounts(peerId);
+            });
+        }, 5000);
     </script>
 </body>
 </html>
