--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -108,6 +108,7 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
+        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -195,6 +196,7 @@
                             unlikedUsers[senderId]++;
                         }
                         updateUnlikesCount(senderId);
+
                     }
                 });
             });
@@ -233,15 +235,14 @@
                     cameraSelect.appendChild(option);
                 });
 
-                // Restore the previously selected camera
-                const savedCameraId = localStorage.getItem('selectedCameraId');
-                if (savedCameraId) {
-                    cameraSelect.value = savedCameraId;
-                }
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
+            }
             } else {
                 cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
             }
-
             return {
                 audio: true,
                 video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
@@ -249,142 +250,277 @@
         }
 
         function detectDevice() {
-            const userAgent = navigator.userAgent;
-            if (/iPad|iPhone|iPod/.test(userAgent)) {
-                return 'iOS';
-            } else if (/Android/.test(userAgent)) {
-                return 'Android';
-            } else {
-                return 'Other';
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
+            }
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
+        }
+
+        function applyMicMute() {
+            if (localStream) {
+                const audioTracks = localStream.getAudioTracks();
+                if (audioTracks.length > 0) {
+                    audioTracks[0].enabled = !muteCheckbox.checked;
+                }
             }
         }
 
-        function addRemoteVideo(peerId, remoteStream) {
-            if (!peerConnections[peerId]) {
-                const remoteWrapper = document.createElement('div');
-                remoteWrapper.className = 'video-wrapper';
-                remoteWrapper.id = `remote-wrapper-${peerId}`;
-                videoContainer.appendChild(remoteWrapper);
+        function sendMuteSignal(mute) {
+            if (call) {
+                call.peerConnection.getSenders().forEach(sender => {
+                    if (sender.track && sender.track.kind === 'audio') {
+                        sender.track.enabled = !mute;
+                    }
+                });
+            }
+        }
 
-                const remoteVideo = document.createElement('video');
-                remoteVideo.autoplay = true;
-                remoteVideo.playsInline = true;
-                remoteWrapper.appendChild(remoteVideo);
+        callButton.addEventListener('click', () => {
+            const peerId = peerIdInput.value.trim();
+            if (!peerId) {
+                alert('Veuillez entrer l\'ID de la personne à appeler.');
+                return;
+            }
 
-                const controls = document.createElement('div');
-                controls.className = 'controls';
-                remoteWrapper.appendChild(controls);
+            getLocalStream()
+                .then((stream) => {
+                    localStream = stream;
+                    localVideo.srcObject = stream;
+                    applyMicMute();
+                    call = peer.call(peerId, stream);
+                    call.on('stream', (remoteStream) => {
+                        addRemoteVideo(peerId, remoteStream);
+                    });
+                    call.on('close', () => {
+                        removeRemoteVideo(peerId);
+                    });
+                })
+                .catch((err) => {
+                    console.error('Failed to get local stream', err);
+                });
+        });
+
+        hangupButton.addEventListener('click', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
+            if (call) {
+                call.close();
+            }
+            localVideo.srcObject = null;
+            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
+        });
+
+        muteCheckbox.addEventListener('change', () => {
+            applyMicMute();
+        });
+
+        muteRemoteCheckbox.addEventListener('change', () => {
+            sendMuteSignal(muteRemoteCheckbox.checked);
+        });
+
+        function saveSelectedCamera() {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+        }
+        async function changeCamera() {
+            const constraints = await updateCameraSelect();
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
+            }
+            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
+            localStream = newStream;
+            localVideo.srcObject = newStream;
+            applyMicMute();
+        }
+        cameraSelect.addEventListener('change', () => {
+            saveSelectedCamera();
+            getLocalStream().then(stream => {
+                localVideo.srcObject = stream;
+            });
+             changeCamera();
+        });
+
+        peerId.addEventListener('input', () => {
+            const command = peerId.value.trim();
+            const unlikeButtons = document.querySelectorAll('.unlike-button');
+            unlikeButtons.forEach(button => {
+                if (command === '!unlike') {
+                    button.style.display = 'block';
+                } else {
+                    button.style.display = 'none';
+                }
+            });
+        });
+
+        function addRemoteVideo(peerId, stream) {
+            if (!document.getElementById(peerId + '-wrapper')) {
+                const videoWrapper = document.createElement('div');
+                videoWrapper.className = 'video-wrapper';
+                videoWrapper.id = peerId + '-wrapper';
+                
+                const videoElement = document.createElement('video');
+                videoElement.id = peerId + 'Video';
+                videoElement.autoplay = true;
+                videoElement.srcObject = stream;
+
+                videoWrapper.appendChild(videoElement);
+                
+                const controlsDiv = document.createElement('div');
+                controlsDiv.className = 'controls';
 
                 const likeButton = document.createElement('button');
                 likeButton.className = 'like-button';
-                likeButton.textContent = '❤️';
-                controls.appendChild(likeButton);
+                likeButton.innerText = '❤️';
+                likeButton.addEventListener('click', () => sendLike(peerId));
 
                 const unlikeButton = document.createElement('button');
                 unlikeButton.className = 'unlike-button';
-                unlikeButton.textContent = '⚡';
-                controls.appendChild(unlikeButton);
+                unlikeButton.innerText = '⚡';
+                unlikeButton.style.display = 'none';
+                unlikeButton.addEventListener('click', () => sendUnlike(peerId));
 
                 const likesCount = document.createElement('p');
                 likesCount.className = 'likes-count';
-                controls.appendChild(likesCount);
+                likesCount.innerText = 'Likes reçus: 0';
 
                 const unlikesCount = document.createElement('p');
                 unlikesCount.className = 'unlikes-count';
-                controls.appendChild(unlikesCount);
+                unlikesCount.innerText = 'Unlikes reçus: 0';
+                unlikesCount.style.display = 'none';
 
-                remoteVideo.srcObject = remoteStream;
-                peerConnections[peerId] = { remoteWrapper, likeButton, unlikeButton, likesCount, unlikesCount };
+                controlsDiv.appendChild(likeButton);
+                controlsDiv.appendChild(unlikeButton);
+                controlsDiv.appendChild(likesCount);
+                controlsDiv.appendChild(unlikesCount);
 
-                likeButton.addEventListener('click', () => {
-                    sendLike(peerId);
-                });
-
-                unlikeButton.addEventListener('click', () => {
-                    sendUnlike(peerId);
-                });
-
-                updateLikesCount(peerId);
-                updateUnlikesCount(peerId);
-            }
+                videoWrapper.appendChild(controlsDiv);
+                videoContainer.appendChild(videoWrapper);            }
         }
 
-        function sendLike(peerId) {
-            const conn = peer.connections[peerId];
-            if (conn && conn[0]) {
-                conn[0].send({ type: 'like' });
-            } else {
-                console.error('Connection not found for peerId: ' + peerId);
-            }
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connections[peerId];
-            if (conn && conn[0]) {
-                conn[0].send({ type: 'unlike' });
-            } else {
-                console.error('Connection not found for peerId: ' + peerId);
+        function removeRemoteVideo(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                videoWrapper.remove();
             }
         }
 
         function updateLikesCount(peerId) {
-            const { likesCount } = peerConnections[peerId];
-            likesCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const likesCount = videoWrapper.querySelector('.likes-count');
+                if (likesCount) {
+                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
+                }
+            }
         }
 
         function updateUnlikesCount(peerId) {
-            const { unlikesCount } = peerConnections[peerId];
-            unlikesCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-        }
-
-        callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value;
-            if (peerId) {
-                getLocalStream()
-                    .then((stream) => {
-                        const call = peer.call(peerId, stream);
-                        call.on('stream', (remoteStream) => {
-                            addRemoteVideo(peerId, remoteStream);
-                        });
-                    })
-                    .catch((err) => {
-                        console.error('Failed to get local stream', err);
-                    });
-            }
-        });
-
-        hangupButton.addEventListener('click', () => {
-            if (call) {
-                call.close();
-            }
-        });
-
-        muteCheckbox.addEventListener('change', applyMicMute);
-
-        function applyMicMute() {
-            if (localStream) {
-                localStream.getAudioTracks().forEach(track => {
-                    track.enabled = !muteCheckbox.checked;
-                });
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
+                if (unlikesCount) {
+                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+                    if (unlikedUsers[peerId] > 0) {
+                        unlikesCount.style.display = 'block';
+                    }
+                }
+                localStorage.setItem('excludedUser', senderId);
+                setTimeout(() => {
+                    if (localStorage.getItem('excludedUser') === senderId) {
+                        document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                        throw new Error("L'utilisateur est exclu");
+                    }
+                }, 5000);
             }
         }
 
-        muteRemoteCheckbox.addEventListener('change', () => {
-            const isMuted = muteRemoteCheckbox.checked;
-            Object.values(peerConnections).forEach(({ remoteWrapper }) => {
-                remoteWrapper.querySelector('video').muted = isMuted;
+        function sendLike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'like' });
             });
-        });
+        }
 
-        cameraSelect.addEventListener('change', () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            getLocalStream()
-                .catch(err => console.error('Failed to get local stream', err));
-        });
+        function sendUnlike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+                setTimeout(() => {
+                    removeRemoteVideo(peerId);
+                    if (call && call.peer === peerId) {
+                        call.close();
+                    }
+                }, 5000);
+            });
+        }
 
+        updateCameraSelect();
+
+(async function initialize() {
+            await updateCameraSelect();
+            const storedCameraId = localStorage.getItem('selectedCameraId');
+            if (storedCameraId) {
+                cameraSelect.value = storedCameraId;
+            }
+        })();
+
+        function handleLike(senderId) {
+            if (!likedUsers[senderId]) {
+                likedUsers[senderId] = 1;
+            } else {
+                likedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+        }
+
+        function handleUnlike(senderId) {
+            if (!unlikedUsers[senderId]) {
+                unlikedUsers[senderId] = 1;
+            } else {
+                unlikedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+            localStorage.setItem('excludedUser', senderId);
+            setTimeout(() => {
+                if (localStorage.getItem('excludedUser') === senderId) {
+                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                    throw new Error("L'utilisateur est exclu");
+                }
+            }, 5000);
+        }
+
+        function updateLikeCounts(peerId) {
+            const videoWrapper = document.getElementById(`videoWrapper-${peerId}`);
+            if (videoWrapper) {
+                const likeCount = likedUsers[peerId] || 0;
+                const unlikeCount = unlikedUsers[peerId] || 0;
+                videoWrapper.querySelector('.like-count').textContent = `Likes: ${likeCount}`;
+                videoWrapper.querySelector('.unlike-count').textContent = `Unlikes: ${unlikeCount}`;
+            }
+        }
+
+        setInterval(() => {
+            if (localStorage.getItem('excludedUser')) {
+                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                throw new Error("L'utilisateur est exclu");
+            }
+            Object.keys(peerConnections).forEach(peerId => {
+                updateLikeCounts(peerId);
+            });
+        }, 5000);
         window.addEventListener('beforeunload', () => {
             if (localStream) {
                 localStream.getTracks().forEach(track => track.stop());
+            }
+            if (call) {
+                call.close();
             }
         });
     </script>
